--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nodemcu-32s, esp32doit-devkit-v1
+
+[env]
+framework = arduino
+lib_deps = 
+	olikraus/U8g2@^2.28.8
+	arduino-libraries/Arduino_JSON@^0.1.0
+monitor_speed = 115200
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
-framework = arduino
+
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
